--- a/angular.json
+++ b/angular.json
@@ -24,8 +24,11 @@
             ],
             "styles": [
               "src/styles.css"
+
             ],
-            "scripts": [],
+            "scripts": [
+              "../node_modules/jquery/dist/jquery.min.js"
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
