--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~7.2.0",
     "bootstrap": "^3.4.1",
     "core-js": "^2.5.4",
+    "dateformat": "^3.0.3",
     "jquery": "^3.4.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
